# pipeline

./: .gitignore  README.md  news_with_symbols.sql  pyproject.toml  top5_news_sector  top5_news_top5_companies
.github/workflows/: ci.yml
ansible/: hosts.ini
scripts/: docker-compose-up.sh
src/: Dockerfile  docker-compose.yaml  requirements-base.txt  requirements.txt
src/dags/: __init__.py  company_stock_s3_dag.py  dbt_dags.py  dbt_dbt_top_sector_news_dag.py  dbt_max_sector_high.py  dbt_max_sector_high_dag.py  dbt_news_dag.py  dbt_run.py  dbt_top_sector_news_dag.py  fetch_company_stock_s3_dag.py  fetch_full_information.py  fetch_full_information_dag.py  fetch_industry.py  fetch_sector_stock_s3_dag.py  fetch_yfinance_news_dag.py  load_lake_to_warehouse_dag.py  pipeline.py  sector_stock_s3_dag.py  yfinance_news_dag.py
src/dags/dbt/common/: dbt_project.yml
src/dags/dbt/common/macros/: generate_schema_name.sql
src/dags/dbt/news/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
src/dags/dbt/stock_sector/: dbt_project.yml  packages.yml
src/dags/plugins/: s3.py  to_snowflake.py
src/plugins/: s3.py  to_snowflake.py
src/plugins/hooks/: company_hook.py  s3_hook.py  snowflake_dev_raw_data_hook.py  yfinance_hook.py
src/plugins/operators/: snowflake_full_refresh_operator.py
src/plugins/utils/: dbt_config_utils.py  file_utils.py  list_utils.py  s3_utils.py  session_utils.py  snowflake_utils.py  yfinance_df_cleaner.py
tests/: test_dags.py  test_yfinance_df_cleaner.py  test_yfinance_hook.py
tests/data/: news_mock.parquet
(+29 files in other folders)
