[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==2.9.1",
    "apache-airflow-providers-standard>=0.0.1",
    "pandas",
    "pytest-docker-tools>=3.1.9",
    "pytest-mock>=3.15.1",
    "yfinance>=0.2.66",
    "astronomer-cosmos>=1.11.1",
    "notebook>=7.4.7",
    "curl-cffi>=0.13.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
    "apache-airflow-providers-amazon>=9.6.1",
    "s3fs>=2025.10.0",
    "awswrangler>=3.10.1",
    "boto3>=1.40.70",
    "apache-airflow-providers-snowflake>=6.2.2",
    "dotenv>=0.9.9",
    "dbt-snowflake>=1.9.2",
    "dbt-core>=1.9.4",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "ansible>=10.7.0",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
]